--- a/style.css
+++ b/style.css
@@ -17,10 +17,17 @@
 		.container{
 			width: 210px;
 			height: 350px;
-			/*background-color: lightgray;*/
+			
 			border-radius: 40px;
 			padding: 20px;
 			box-shadow: 0px 0px 50px red;
+		}
+
+		.name{
+			font-size: 26px;
+			font-weight: bolder;
+			color: black;
+			margin-top: 20px;
 		}
 
 		input{
@@ -37,7 +44,7 @@
 		}
 		
 		.eq{
-			width: 92px;
+			width: 90px;
 			margin-left: 10px;
 			background-color: orange;
 		}
@@ -53,3 +60,4 @@
 
 		.opr{
 			background-color: orange;
+		}
